 * Added get_surround to component. This returns the relevant Surround object 
    (Default if none is specified).
 * Tidied the %params bit in Stage.pm a little.

2006-11-15 moj
 * Removed 10_core.pl, database.pl, and archive_name.xml from the repository 
    - they are created by epadmin, and otherwise get in the way when making 
    commits.

2006-11-15 moj
 * Create human_delay in EPrints::Utils. This is similar to human_filesize, and
    returns a string in the form 'N hour(s)', 'N day(s)', or 'N week(s)'. It
    is not meant to be accurate (e.g. it doesn't say '3 days and 2 hours').
 * The registration mail now says how long the user has to confirm registration.
 * The reject email now has a link to the edit page.
 * Tidied up Reject/Remove a little.

2006-11-16 tdb
 * Added export plugins for METS and MODS

2006-11-17 moj
 * Added export plugin for Atom

2006-11-17 cjg
 * Added method require_if_exists which requires a perl module if possible, 
    and caches failures to save time.
 * Used this to supress warnings in Import plugins
 * Added XML::trim_whitespace which removes whitespace at the start and end of
    XML chunks plus converts N whitespace to 1 space.
 * Used this to tidy up citations.
 * Used this in RSS and ATOM feeds
 * Renamed feed exports to Feed: foo

2006-11-17 moj
 * Added export plugin for RSS 2.0
 
2006-11-17 cjg
 * Added Thumbnails convert plugin
 * Added thumbnails directory for thumbnails
 * Rewrote fileicon code
 * fileinfo is now a core field
 * Added $doc->get_icon_url and $doc->render_icon_link
 * Added $session->get_full_url to get the, er, full url of the request.
 * Added New Version and Use as Template actions 
 * Fixed a bug in loggin of email messages
 * Added "Message" tab to eprint view
 * Fixed typo and modified lay-out in ImageMagick.pm
 * Changed "no reason given" to "no reason was given" - nicer.
 * Fixed bug with null emails in list_user_emails

2006-11-17 cjg
 * Added view-user-history screen.