@@ -910,6 +910,10 @@ Titles and Help for the System Fields
     <epp:phrase id="eprint_fieldhelp_metadata_visibility"></epp:phrase>
     <epp:phrase id="eprint_fieldopt_metadata_visibility_show">Always Show</epp:phrase>
     <epp:phrase id="eprint_fieldopt_metadata_visibility_no_search">Hide in search results</epp:phrase>
+    <epp:phrase id="eprint_fieldname_latitude">Latitude</epp:phrase>
+    <epp:phrase id="eprint_fieldname_longitude">Longitude</epp:phrase>
+    <epp:phrase id="eprint_fieldhelp_latitude">The Latitude of this item. Southern latitudes should be expressed as a negative.</epp:phrase>
+    <epp:phrase id="eprint_fieldhelp_longitude">The Longitude of this item. Western longitudes should be expressed as a negative.</epp:phrase>
 
     <epp:phrase id="eprint_fieldname__fulltext_">Full Text</epp:phrase>
     <epp:phrase id="eprint_fieldname_documents">Documents</epp:phrase>
@@ -945,7 +949,10 @@ Titles and Help for the System Fields
     <epp:phrase id="user_fieldname_mailempty">Mail Empty Results</epp:phrase>
     <epp:phrase id="user_fieldhelp_mailempty">If there are items in editorial review, within your editorial rights, should the repository still send you an empty email?</epp:phrase>
     <epp:phrase id="user_radio_mailempty"><label><epc:pin name="true"/>Yes, mail me when editorial review is empty.</label><br/><label><epc:pin name="false"/>No. Only mail me when there is something I can edit and approve.</label></epp:phrase>
-
+    <epp:phrase id="user_fieldname_latitude">Latitude</epp:phrase>
+    <epp:phrase id="user_fieldname_longitude">Longitude</epp:phrase>
+    <epp:phrase id="user_fieldhelp_latitude">The Latitude associated with this user. Southern latitudes should be expressed as a negative.</epp:phrase>
+    <epp:phrase id="user_fieldhelp_longitude">The Longitude associated with this user. Western longitudes should be expressed as a negative.</epp:phrase>
 
     <epp:phrase id="document_fieldname_docid">ID of Document</epp:phrase>
     <epp:phrase id="document_fieldname_pos">Document number (within item)</epp:phrase>
