@@ -64,7 +64,7 @@ my $DEBUG_SQL = 0;
 
 # this may not be the current version of eprints, it's the version
 # of eprints where the current desired db configuration became standard.
-$EPrints::Database::DBVersion = "3.0.3";
+$EPrints::Database::DBVersion = "3.0.4";
 
 # cjg not using transactions so there is a (very small) chance of
 # dupping on a counter. 
